<resources>
    <string name="app_name">Orca Settings</string>
    <string name="user_interface">Interface</string>
    <string name="header_statusbar">Status Bar</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="general_ui">General UI</string>
    <string name="clock">Clock</string>
    <string name="signal">Signal</string>
    <string name="quick_toggles">Quick Toggles</string>
    <string name="others">Others</string>
    <string name="navigation_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="tools">Tools</string>
    <string name="title_general_ui">General UI</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_quick_toggles">Quick Toggles</string>
    <string name="title_statusbar_signal">Statusbar Signal</string>
    <string name="title_statusbar">Statusbar</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_statusbar">Battery and colors...</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="menu_user_interface_reset">Reset notification wallpaper</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="group_applications">Applications</string>
    <string name="select_application">Select application</string>
    <string name="dpi">DPI</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="set">Set</string>
    <string name="ics_color">ICS</string>
    <string name="title_show_screenshot">Show screenshot</string>
    <string name="title_show_airplane_toggle">Show airplane toggle</string>
    <string name="power_menu_expanded_desktop">Show expanded desktop</string>
    <string name="title_show_navbar_hide">Show navigation bar toggle</string>
    <string name="status_bar_clock_header">Clock</string>
    <string name="status_bar_battery_header">Battery</string>
    <string name="status_bar_signal_header">Signal</string>
    <string name="status_bar_misc">Misc</string>
    <string name="status_bar_clock_title">Clock style</string>
    <string name="status_bar_general_title">General</string>
    <string name="clock_title_enable">Clock style</string>
    <string name="title_clock_ampm_entries">AM/PM style</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="statusbar_background_color">Statusbar color</string>
    <string name="clock_color_title">Clock color</string>
    <string name="clock_color_style_title">Clock color style</string>
    <string name="clock_color">Color of your choice</string>
    <string name="stock_color">Stock Clock color (default)</string>
    <string name="alarm">Alarms</string>
    <string name="clock_options">Clock Options</string>
    <string name="nothing">Nothing</string>
    <string name="today">Calendar for today</string>
    <string name="event">Calendar new event</string>
    <string name="voiceassist">Voice commands</string>
    <string name="title_clock_doubleclick">Clock double click actions</string>
    <string name="title_clock_longclick">Clock long click actions</string>
    <string name="title_clock_shortclick">Clock short click actions</string>
    <string name="battery_icon_title">Icon Style</string>
    <string name="icon_only">Icon only</string>
    <string name="text_only">Text only</string>
    <string name="icon_w_text">Icon with text</string>
    <string name="icon_w_center_text">Icon with centered text</string>
    <string name="circlemod">CircleMOD</string>
    <string name="circle_battery">CM Circle</string>
    <string name="circle_battery_w_percent">CM Circle w/ percent</string>
    <string name="circle_dotted_w_percent">CM Dotted w/ percent</string>
    <string name="hide">Hide</string>
    <string name="circle_battery_color">Circle color</string>
    <string name="circle_battery_text_color">Circle text color</string>
    <string name="circle_battery_animation_speed">Circle animation speed</string>
    <string name="circle_battery_animation_speed_none">None</string>
    <string name="circle_battery_animation_speed_slow">Slow</string>
    <string name="circle_battery_animation_speed_stock">Normal</string>
    <string name="circle_battery_animation_speed_fast">Fast</string>
    <string name="circle_battery_reset_title">Reset circle colors</string>
    <string name="circle_battery_reset_summary">Reset circle colors to apply installed theme engine colors</string>
    <string name="battery_bar">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_cat">Battery bar options</string>
    <string name="battery_bar_style_title">Battery bar style</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_animate_summary">The charging animation may result in a poor user experience. Enable at your own discretion.</string>
    <string name="signal_style">Signal text style</string>
    <string name="signal_color_title">Signal color</string>
    <string name="hide_signal_title">Hide signal bars</string>
    <string name="hide_signal_summary">Updates when signal strength changes</string>
    <string name="wifi_signal_style">Wi-Fi Signal text style</string>
    <string name="wifi_signal_color_title">Wi-Fi Signal color</string>
    <string name="show_signal_bars">Show signal bars</string>
    <string name="show_signal_text">Show signal text</string>
    <string name="show_with_dbm">Show with dBm</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="no_clock">No clock</string>
    <string name="dont_show">Don\'t show</string>
    <string name="small_am_pm">Small AM/PM</string>
    <string name="regular_am_pm">Regular AM/PM</string>
    <string name="small_weekday">Small weekday</string>
    <string name="regular_weekday">Regular weekday</string>
    <string name="navbar_bg">Navbar background</string>
    <string name="navbar_button_colors">Navbar button color</string>
    <string name="background_style">Background Color Style</string>
    <string name="bgs_color">Color/Alpha only</string>
    <string name="bgs_defaultbg_plus_color">Default Background + Color/Alpha</string>
    <string name="bgs_defaultbg">Default Background only</string>
    <string name="statusbar_bg">Statusbar background</string>
    <string name="navbar_bg_color">Navigation bar background</string>
    <string name="toggle_airplane_mode">Airplane Mode</string>
    <string name="toggle_auto_rotate">Auto Rotate</string>
    <string name="toggle_bluetooth">Bluetooth</string>
    <string name="toggle_fcharge">Fast Charge</string>
    <string name="toggle_gps">GPS</string>
    <string name="toggle_lte">LTE</string>
    <string name="toggle_data">Data</string>
    <string name="toggle_nfc">NFC</string>
    <string name="toggle_silent">Silent</string>
    <string name="toggle_sync">Sync</string>
    <string name="toggle_torch">Torch</string>
    <string name="toggle_2g">2G</string>
    <string name="toggle_usb_tether">USB Tether</string>
    <string name="toggle_vibrate">Vibrate</string>
    <string name="toggle_wifi_tether">Wifi Tether</string>
    <string name="toggle_wifi">Wi-Fi</string>
    <string name="toggle_user">User</string>
    <string name="toggle_favorite_contact">Favorite Contact</string>
    <string name="toggle_settings">Settings</string>
    <string name="toggle_signal">Signal</string>
    <string name="toggle_clock">Clock</string>
    <string name="toggle_ime">IME</string>
    <string name="toggle_battery">Battery</string>
    <string name="toggle_brightness">Brightness</string>
    <string name="toggle_screen">Screen off</string>
    <string name="toggle_default_entries">USER|BRIGHTNESS|SETTINGS|WIFI|SIGNAL|ROTATE|BATTERY|AIRPLANE_MODE|BLUETOOTH|SCREEN</string>
    <string name="toggles_display_dialog">Choose which toggles to use</string>
    <string name="enabled_toggles_title">Enabled toggles</string>
    <string name="enabled_toggles_summary">Choose toggles to display</string>
    <string name="toggles_display_close">Close</string>
    <string name="toggles_order_title">Toggle order</string>
    <string name="toggles_order_summary">Choose the order which your toggles are displayed</string>
    <string name="toggles_per_row_title">Toggles per row</string>
    <string name="toggles_per_row_summary">Choose how many toggles to show per row</string>
    <string name="toggle_favcontact_title">Favorite contact</string>
    <string name="tablet_cat">Tablet options</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications on the status bar</string>
    <string name="show_overflow_title">Show Menu UI Overflow</string>
    <string name="show_overflow_summary">Display the 3-dot overflow menu button within apps</string>
    <string name="notification_wallpaper_title">Choose notification background</string>
    <string name="notification_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="hide_extras">Hide Extras</string>
    <string name="hide_extras_summary">Hide some systembar stuff i.e. the compat mode button(requires UI restart)</string>
    <string name="user_mode_ui">UI Mode</string>
    <string name="user_mode_ui_summary">What style to display NavBar and Statusbar</string>
    <string name="multipane_ui">Enable Dual panel</string>
    <string name="multipane_ui_summary">This will Enable/Disable Dual panel view (requires reboot)</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">Allows you to slide your finger along the top of the statusbar to change the brightness. Does nothing when autobrightness is enabled.</string>
    <string name="recents_rambar_title">Enhance recents panel</string>
    <string name="recents_rambar_summary">Add a memory usage bar to the recents panel</string>
    <string name="lcd_density_title">LCD Density</string>
    <string name="lcd_density_summary">unknown</string>
</resources>