<?xml version="1.0" encoding="UTF-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <ListPreference
            android:key="statusbar_background_style"
            android:layout="?android:attr/preferenceLayoutChild"
            android:persistent="true"
            android:entries="@array/background_entries"
            android:entryValues="@array/background_values"
            android:title="@string/background_style" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="statusbar_background_color"
            android:layout="?android:attr/preferenceLayoutChild"
            android:persistent="true"
            android:title="@string/statusbar_background_color"
            android:defaultValue="#cc000000"
            alphaSlider="true" />

    <PreferenceCategory
            android:key="battery"
            android:title="@string/status_bar_battery_header">

        <ListPreference
            android:key="battery_icon_list"
            android:title="@string/battery_icon_title"
            android:entries="@array/battery_icon_entries"
            android:entryValues="@array/battery_icon_values" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="circle_battery_color"
            android:title="@string/circle_battery_color"
            android:defaultValue="#33B5E5" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="circle_battery_text_color"
            android:title="@string/circle_battery_text_color"
            android:defaultValue="#33B5E5" />

        <ListPreference
            android:key="circle_battery_animation_speed"
            android:title="@string/circle_battery_animation_speed"
            android:entries="@array/circle_battery_animation_speed_entries"
            android:entryValues="@array/circle_battery_animation_speed_values" />

        <Preference
            android:key="circle_battery_reset"
            android:title="@string/circle_battery_reset_title"
            android:summary="@string/circle_battery_reset_summary" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="battery_bar_cat"
            android:title="@string/battery_bar_cat">

        <ListPreference
            android:key="battery_bar_list"
            android:title="@string/battery_bar"
            android:entries="@array/battery_bar_entries"
            android:entryValues="@array/battery_bar_values" />

        <ListPreference
            android:key="battery_bar_style"
            android:title="@string/battery_bar_style_title"
            android:entries="@array/battery_bar_style_entries"
            android:entryValues="@array/battery_bar_style_values" />

        <CheckBoxPreference
            android:key="battery_bar_animate"
            android:title="@string/battery_bar_animate_title"
            android:summary="@string/battery_bar_animate_summary" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="battery_bar_color"
            android:title="@string/battery_bar_color"
            android:defaultValue="#33B5E5" />

        <ListPreference
            android:key="battery_bar_thickness"
            android:title="@string/battery_bar_thickness_title"
            android:entries="@array/battery_bar_thickness_entries"
            android:entryValues="@array/battery_bar_thickness_values" />

    </PreferenceCategory>

</PreferenceScreen>
